@@ -143,7 +143,14 @@ dnl
 AM_PATH_GCONF($GCONF_REQUIRED,,AC_MSG_ERROR([
 *** gconf >= $GCONF_REQUIRED is required]),
 gconf-gtk)
-AM_GCONF_SOURCE
+
+AC_ARG_ENABLE(install_schemas,
+	[  --disable-install-schemas        Disable installation of the gconf schemas])
+AM_CONDITIONAL(INSTALL_SCHEMAS, test x$enable_install_schemas != xno)
+
+if test x$enable_install_schemas != xno; then
+	AM_GCONF_SOURCE
+fi
 				 
 # find the actual value for $prefix that we'll end up with
 REAL_PREFIX=
